--- a/lightning_flask/templates/layout.html
+++ b/lightning_flask/templates/layout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dev-main.css') }}">
-
+    <link rel="shortcut icon" type="image/png" herf="lightning_flask\static\profile_pics\731dee433d2b1370.jpg">
     {% if title %}
         <title>Lightning in My Hands - {{ title }}</title>
     {% else %}
@@ -20,7 +20,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Lightning in my Hands</a>
+          <a class="navbar-brand mr-4" href="/">andante cantabile</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,6 +28,7 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
+              <a class="nav-item nav-link" href="{{ url_for('contact.email') }}">Contact</a>
             </div>
             <!-- Navbar Right Side --> 
             <div class="navbar-nav">
