--- a/lightning_flask/static/main.css
+++ b/lightning_flask/static/main.css
@@ -1,12 +1,17 @@
 body {
-  background: #fafafa6b;
+  background: #1d2124;
   color: #333333;
   margin-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #444444;
+  color: #007bff;
 }
+
+p {
+  color: whitesmoke;
+}
+
 
 .bg-steel {
   background-color: #5f788a;
@@ -25,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .content-section {
-  background: #ffffff;
+  background: #212529;
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
@@ -33,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .article-title {
-  color: #444444;
+  color: whitesmoke;
 }
 
 a.article-title:hover {
@@ -52,7 +57,7 @@ a.article-title:hover {
 }
 
 .article-metadata {
-  padding-bottom: 1px;
+  padding-bottom: 3px;
   margin-bottom: 4px;
   border-bottom: 3px solid #e3e3e3
 }
@@ -77,4 +82,46 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+
+.about-section{
+  padding: 10px 11px 1px 10px;
+  border: 1px solid #dddddd;
+  border-radius: 3px;
+  margin-bottom: 20px;
+  background: #212529
+}
+
+legend {
+    color: whitesmoke;
+}
+
+.form-control-label {
+    color: whitesmoke;
+}
+
+.form-check-label {
+  color: whitesmoke;
+}
+
+.btn-info  {
+  background-color: #007bff;
+  border-color: whitesmoke;
+}
+
+.btn-info:hover {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-outline-info {
+  border-color: whitesmoke;
+  color: #007bff;
+}
+
+.btn-outline-info:hover {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
 }
