--- a/lightning_flask/templates/layout.html
+++ b/lightning_flask/templates/layout.html
@@ -37,6 +37,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">New Post</a>
                 <a class="nav-item nav-link" href="{{ url_for('users.account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
+                <img class="article-img" src="{{ image_file }}">
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
                 <!--<a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>-->
