added reading list and edit about me

--- a/lightning_flask/templates/about.html
+++ b/lightning_flask/templates/about.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h2>My name's Jay</h2>
+    <h1>Welcome to my side of the net</h1>
     <div class="about-section">
-        <p>An autodidact in web development, and this site is my output. I'll be posting my ideas here.
-        </p>
+        <p>An autodidact in many subjects with the popular flavors including web dev, history, and martial art.</p>
+        <p>I follow Jesus</p>
 
     </div>
 {% endblock content %}
