--- a/lightning_flask/static/main.css
+++ b/lightning_flask/static/main.css
@@ -1,14 +1,23 @@
 body {
   background: #1d2124;
-  color: #333333;
+  color: #fdfdfd;
   margin-top: 5rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
+  color: whitesmoke;
+}
+
+h2, h3, h4, h5, h6 {
   color: #007bff;
 }
 
 p {
+  color: whitesmoke;
+}
+
+li {
+
   color: whitesmoke;
 }
 
