update reading.html with typo fix

--- a/lightning_flask/templates/reading.html
+++ b/lightning_flask/templates/reading.html
@@ -8,10 +8,10 @@
             <li>Out of the Silent Planet - C. S. Lewis</li>
             <li>SJWs Always Lie - Vox Day</li>
             <li>How to Be Poor - Milo Yiannopoulus</li>
-            <li>Alt Hero Omnibus Vol 1 - Vox Day</li>
+            <li>Alt Hero Omnibus Vol. 1 - Vox Day</li>
             <li>The Irrational Atheist - Vox Day</li>
             <li>On War - Carl von Clausewitz</li>
-            <li>A History of France - John Julis Norwich</li>
+            <li>A History of France - John Julius Norwich</li>
             <li>A History of Military Strategy - Martin van Creveld</li>
         </ul>
         <h2>2018</h2>
