--- a/lightning_flask/templates/reading.html
+++ b/lightning_flask/templates/reading.html
@@ -4,6 +4,7 @@
     <div class="reading-section">
         <h2>2019</h2>
         <ul>
+            <li>Perelandra - C. S. Lewis</li>
             <li>Darkness Reflected - Will J. J.</li>
             <li>Out of the Silent Planet - C. S. Lewis</li>
             <li>SJWs Always Lie - Vox Day</li>
@@ -12,7 +13,7 @@
             <li>The Irrational Atheist - Vox Day</li>
             <li>On War - Carl von Clausewitz</li>
             <li>A History of France - John Julius Norwich</li>
-            <li>A History of Military Strategy - Martin van Creveld</li>
+            <li>A History of Strategy - Martin van Creveld</li>
         </ul>
         <h2>2018</h2>
         <ul>
