--- a/lightning_flask/templates/reading.html
+++ b/lightning_flask/templates/reading.html
@@ -2,6 +2,11 @@
 {% block content %}
     <h1>Reading List</h1>
     <div class="reading-section">
+        <h2>2020</h2>
+        <ul>
+            <li>The Other End of the Leash - Patricia McConnell</li>
+            <li>Perelandra - C. S. Lewis</li>
+        </ul>    
         <h2>2019</h2>
         <ul>
             <li>Perelandra - C. S. Lewis</li>
@@ -20,6 +25,7 @@
             <li>Sacre Bleu - Christopher Moore</li>
             <li>The Richest Man in Babylon - George S. Clason</li>
             <li>The Forge and the Crucible - Mircea Eliade</li>
+            <li>Tribe of Mentors - Tim Ferris</li>
         </ul>
 
     </div>
