add city beyond time

--- a/lightning_flask/templates/reading.html
+++ b/lightning_flask/templates/reading.html
@@ -4,6 +4,7 @@
     <div class="reading-section">
         <h2>2020</h2>
         <ul>
+            <li>City Beyond Time: Tales of the Fall of Metachronopolis - John C. Wright</li>
             <li>The Other End of the Leash - Patricia McConnell</li>
             <li>Perelandra - C. S. Lewis</li>
         </ul>    
