--- a/lightning_flask/templates/reading.html
+++ b/lightning_flask/templates/reading.html
@@ -4,7 +4,7 @@
     <div class="reading-section">
         <h2>2020</h2>
         <ul>
-            <li>The Hobbit</li>
+            <li>The Hobbit - J. R. R. Tolkien</li>
             <li>That Hideous Strength - C. S. Lewis</li>
             <li>Aquinas: A Beginner's Guide - Edward Feser</li>
             <li>City Beyond Time: Tales of the Fall of Metachronopolis - John C. Wright</li>
