--- a/lightning_flask/templates/reading.html
+++ b/lightning_flask/templates/reading.html
@@ -4,6 +4,12 @@
     <div class="reading-section">
         <h2>2020</h2>
         <ul>
+            <li>The Fellowship of the Ring - J. R. R. Tolkien</li>
+            <li>The Phoenix Project - Kim, Behr, Spafford</li>
+            <li>Foundation and Empire - Isaac Asimov</li>
+            <li>Antifragile - Nassim Nicholas Taleb</li>
+            <li>Foundation - Isaac Asimov</li>
+            <li>The Meaning of Marriage - Timothy Keller</li>
             <li>The Hobbit - J. R. R. Tolkien</li>
             <li>That Hideous Strength - C. S. Lewis</li>
             <li>Aquinas: A Beginner's Guide - Edward Feser</li>
